- New 'guild leave' command (needs testing, but the server I play is down)
  added.
- Nearly complete oRO and pRO support. Thanks to jojobaoil and duckieeex!

New config options:
- showDomain (flag)
  If set to 1 will display domains along with messages.
- serverType (number)
  Defines what kind of server you're playing on.
  0 = normal server
  1 = oRO (Oceania)
  2 = pRO (Philippines)

Credits:
- jsteng: VVVS weapon name bugfix.
- arachno: Language code bugfix, chat.txt map name bugfix.
- Duckieeex: Help with pRO support.

==================
### 1.5.2 (beta)
==================

** INCOMPATIBLE CHANGES **:
- For users of teleportAuto_search, in order to have it work you must now:
  * Set teleportAuto_idle to 1
  * Set ai_teleport_idle in timeouts.txt to the same as ai_teleport_search
  * Delete ai_teleport_search in timeouts.txt (it is obsolete)
  * Set route_randomWalk to 0
- If you have been using "maxUses" to limit the number of times you attempt to
  cast a skill, you may have to change it to "maxAttempts" instead.
- Kobolds have been renamed from Kobold # to Kobold-#.
  Many people don't know about using tabs in mon_control.txt, and
  would probably have problems figuring out what to do for Kobolds.
  Example: Kobold 1 is now Kobold-1


Bug fixes:
- Correctly detect pets.
- Fix all kinds of troubles regarding sitting and standing.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.
- The 'conf' chat command now works.
- partyAggressives now counts monsters your party attacked
- Fixed some cases of ksPlayers not working
- When following master around a corner, fallback to routing algorithm instead
  of trying to walk through the corner
- Don't increment maxUses counter for an attackSkillSlot until the skill is
  actually used (internal note: this counter is indexed using the monster ID
  and the skill ID, so if you have more than one attackSkillSlot or
  monsterSkill block that uses the same skill, they will unexpectedly share